--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,11 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/home_page"
+        android:id="@+id/homeFragment"
         android:enabled="true"
         android:icon="@drawable/appsicon"
         android:title="Home"/>
     <item
-        android:id="@+id/cart_page"
+        android:id="@+id/cartFragment"
         android:enabled="true"
         android:icon="@drawable/listicon"
         android:title="Cart"/>
