--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -9,10 +9,27 @@
         android:id="@+id/homeFragment"
         android:name="com.example.rush.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_appListFragment"
+            app:destination="@id/appListFragment"
+            app:enterAnim="@transition/slide_in_right"
+            app:exitAnim="@transition/slide_out_left"
+            app:popEnterAnim="@android:anim/slide_in_left"
+            app:popExitAnim="@android:anim/slide_out_right" />
+    </fragment>
     <fragment
         android:id="@+id/cartFragment"
         android:name="com.example.rush.CartFragment"
         android:label="fragment_cart"
         tools:layout="@layout/fragment_cart" />
+    <fragment
+        android:id="@+id/appListFragment"
+        android:name="com.example.rush.subfragments.AppListFragment"
+        android:label="fragment_app_list_list"
+        tools:layout="@layout/fragment_app_list_list" >
+        <action
+            android:id="@+id/action_appListFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
