--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -12,7 +12,10 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_appListFragment"
-            app:destination="@id/appListFragment"
+             />
+        <action
+            android:id="@+id/action_homeFragment_to_allAppListFragment"
+            app:destination="@id/allAppListFragment"
             app:enterAnim="@transition/slide_in_right"
             app:exitAnim="@transition/slide_out_left"
             app:popEnterAnim="@android:anim/slide_in_left"
@@ -24,12 +27,16 @@
         android:label="fragment_cart"
         tools:layout="@layout/fragment_cart" />
     <fragment
-        android:id="@+id/appListFragment"
-        android:name="com.example.rush.subfragments.AppListFragment"
-        android:label="fragment_app_list_list"
-        tools:layout="@layout/fragment_app_list_list" >
+        android:id="@+id/allAppListFragment"
+        android:name="com.example.rush.subfragments.AllAppListFragment"
+        android:label="fragment_all_app_list"
+        tools:layout="@layout/fragment_all_app_list" >
         <action
-            android:id="@+id/action_appListFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            android:id="@+id/action_allAppListFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+           />
+        <argument
+            android:name="appType"
+            app:argType="integer" />
     </fragment>
 </navigation>
