more categories added

--- a/app/src/main/res/layout/fragment_app_list.xml
+++ b/app/src/main/res/layout/fragment_app_list.xml
@@ -40,6 +40,14 @@
             android:layout_weight="1"
             android:text="Firefox"
             android:textAppearance="?attr/textAppearanceListItem" />
+
+<!--        <androidx.appcompat.widget.AppCompatCheckedTextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="heyyyy"-->
+<!--            android:textColor="@color/white">-->
+
+<!--        </androidx.appcompat.widget.AppCompatCheckedTextView>-->
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
